# dss-pollution-extraction

./: .bumpver.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PyPI_automation.md  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  publish.yml
config/: default_config.json  sample_config.yaml  user_config_template.yaml
docker/: Dockerfile  Dockerfile copy  docker-compose.yml  requirements-docker.txt
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  tutorial.rst
examples/data/: sample_pm25.nc  sample_points.csv  sample_regions.geojson
examples/notebooks/: advanced_spatial_analysis.ipynb  data_extraction_analysis.ipynb  health_threshold_analysis.ipynb  pollution_analysis_tutorial.ipynb  temporal_pattern_analysis.ipynb  test_data_read_example.ipynb
examples/scripts/: basic_workflow.py  batch_processing.py  data_read_example.py  nuts3_analysis.py
pollution_extraction/: __init__.py  analyzer.py  cli.py  config.py  examples.py  utils.py
pollution_extraction/core/: __init__.py  data_exporter.py  data_reader.py  data_visualizer.py  spatial_extractor.py  temporal_aggregator.py
pollution_extraction/core/exporters/: __init__.py  base.py  raster.py  spatial.py  tabular.py
scripts/: build.sh  deploy.sh  setup_dev.sh  test.sh
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_data_reader.py  test_exporter.py  test_integration.py  test_reader.py  test_spatial_extractor.py  test_temporal_aggregator.py  test_visualizer.py
tests/fixtures/: sample_data.nc
